# source-plugin-rs

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: lib.rs
