[package]
name = "source-plugin-rs"
version = "1.0.0"
edition = "2024"
authors = ["LaVashik"]
description = "A cross-platform blank server plugin template for the Source Engine."
license = "MIT"
repository = "https://github.com/LaVashikk/source-plugin-rs"
keywords = ["source-engine", "gamedev", "plugin", "valve"]

[lib]
name = "source_plugin_rs"
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = "thin"
codegen-units = 1
strip = "symbols"

# ----------------
[dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52.0", features = ["Win32_Foundation"] }
